# objectifiabilist

./: .gitignore  Academic Paper.md  README.md  types.ts  white-paper.md
.github/workflows/: publish.yml
fixtures/: hostage-example.json  worked-example.json  worked-example.ts
python/: pyproject.toml
python/objectifiabilist/: LICENSE  README.md  __init__.py  functions.py  pyproject.toml
python/objectifiabilist.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/objectifiabilist/src/objectifiabilist_SHAKERF/: __init__.py  functions.py  models.py
python/objectifiabilist/tests/: conftest.py  test_fixture.py  test_functions.py
typescript/: README.md  compute-fixture.ts  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
typescript/src/: functions.test.ts  functions.ts  highs-js.d.ts  index.ts  polytope.ts  types.ts
