[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "objectifiabilist"
version = "0.1.0"
description = "Python implementation of Objectifiabilism — a constructivist metaethical framework for explicit, auditable, comparative moral reasoning"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["pydantic>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Repository = "https://github.com/ShakerFunkhouser/objectifiabilist"

[tool.setuptools.packages.find]
where = ["."]
